# Curso-Plataformas-Abiertas-UCR-I-2025

./: .gitignore  .gitmodules  Class1.md  Class2.md  Class3.md  Github_user_setup.md  README.md  carta_estudiante_plataformas.docx (1).pdf:Zone.Identifier
Class10/: CMakeLists.txt  example1  example1.c  header_generation.sh  model.py  onnx_converssion.py  pico.c  sine_model.tflite  tf_lite_2_header.sh  tf_lite_model.py  tiny_sine_model.onnx  tiny_sine_model.pth
Class10/tf_lite_deploy/: CMakeLists.txt  platformio.ini  toolchain.cmake
Class10/tf_lite_deploy/include/: model.h
Class10/tf_lite_deploy/src/: main.cpp
Class12/: example1  example1.c
Class12/src/: example1  example1.c
Class13/: exercise.c  exercise2  exercise2.c  exercise3  exercise3.c  hash.c  main  main.c
Class14/: exercise1.c
Class15/: main.c  parallel_sum
Class16/: example  example.cpp  example2.cpp  notes.txt  server
Class17/: excercise.c  output
Class2/: Class2.md  basic_system_info.sh  employees.sh  employees.txt  function.sh  greeting.sh  num_example.sh  result.txt  solution1.sh  system_hardware_monitoring.sh  test1.sh  test_2.sh  user_unputs.sh  usr_input.sh
Class3/: Class3.md
Class3/linear_regression/: CMakeLists.txt  data.tsv  generate_data.py  linear_regression  main.c
Class4/: Class4.md  my_daemon.sh
Class5/: CMakeLists.txt  Class5.md  Makefile  example  example.json  example.s  example.v  hello_arm  main.c  simulation
Class5/C_Project/: CMakeLists.txt  main.c
Class5/C_Project/build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  myprogram
Class5/test/: CMakeLists.txt  myprogram
Class5/test/src/: data.json  main.cpp
Class6/: CMakeLists.txt  Class6.md  assembly.txt  main  main.c  main.i  main.s  main2  main2.ll  main2.s  optimized.bc  optimized.ll
Class7/: Class7.md  Dockerfile  hosts.txt  mpi_hello.py
Class8/: arm_code.S  calc  management  management.c  operators.c  sum.c  sum_exe
Class9/: CMakeLists.txt  MMIO.md  avx_check  compile_avx2.sh  example1  example1.c  example10  example10.c  example11  example11.c  example12.c  example13.c  example14.c  example15.c  example16.c  example17.c  example2  example2.c  example3  example3.c  example4  example4.c  example5  example5.c  example6  example6.c  example7  example7.c  example8  example8.c  example9  example9.c  memory_layout  memory_layout.cpp  native_program  program  query_4_avx2.sh  query_instruction_set.sh  sensor_log.txt  vectorized
Git_Guide/: Github_user_setup.md  guia repo GIT (1).txt:Zone.Identifier  guia repo GIT.txt
Labs/: Lab1.md  consume_memory.sh
Labs/Lab2/: Lab2.md
Project/: Project.md
Quices/: Quiz1.md  Quiz1_solution partial.sh  generate_log.sh
Quices/Quiz1/: Quiz1_solution.sh  resultados.txt
Quices/Quiz2/: Quiz2.md
Quices/Quiz2/include/: sum.h
Quices/Quiz2/src/: main.c  sum.c
Quices/Quiz3/: Quiz3.md  create_encrypted  create_encrypted.c  solution.c
Quices/Quiz4/: Quiz4.md
Quices/Quiz5/: Quiz5.md
